# uptime-monitor

./: .audit.toml  .env.local.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  lefthook.yml  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  supabase-mcp.json  vercel.json
.agent/rules/: monitoring.md
.claude/: settings.json
.claude/skills/: api-routes.md  components.md  domain.md  forms.md  monitor-checker.md  nextjs.md  notifications.md  realtime.md  security.md  status-pages.md  supabase.md  testing.md
app/: globals.css  layout.tsx  page.tsx
components/: account-settings.tsx  cron-settings.tsx  dashboard-layout.tsx  delete-incident-button.tsx  delete-maintenance-button.tsx  group-actions.tsx  group-dialog.tsx  icons.tsx  incident-form.tsx  incident-quick-actions.tsx  incident-status-badge.tsx  live-monitors.tsx  maintenance-form.tsx  mfa-enroll.tsx  mfa-settings.tsx  mfa-verify.tsx  monitor-detail-client.tsx  monitor-detail-panel.tsx  monitor-sidebar.tsx  oauth-buttons.tsx  realtime-status.tsx  response-time-chart.tsx  status-page-form.tsx  test-notification-button.tsx  theme-toggle.tsx
hooks/: use-monitors-with-history.ts  use-realtime-monitors.ts
lib/: constants.ts  monitor-checker.ts  notifications.ts  qstash.ts  security.ts  ssl-utils.ts
public/: site.webmanifest
script/: chunk-db.sh
scripts/: README.md  chunk_sql.py  chunk_sql.sh  kuma-monitors-import.sql  local-cron.mjs
supabase/: schema.sql
tools/audit/: Cargo.toml
tools/audit/src/: config.rs  main.rs
types/: application.ts  database.ts
(+91 files in other folders)
