[package]
name = "audit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
walkdir = "2.5"
colored = "2.1"
rayon = "1.10"

# Image processing for favicon generation
resvg = "0.44"
tiny-skia = "0.11"
png = "0.17"

# Async HTTP for local-cron
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
